# lucid

./: .gitignore  Cargo.toml  README.md  build.rs  dictionary.example.json  tauri.conf.json
capabilities/: default.json
icons/: icon.icns
scripts/: setup-model.sh
src/: api_info.rs  config.rs  dictionary.rs  lib.rs  main.rs  openai.rs  runtime.rs  supervisor.rs
src/app/: commands.rs  mod.rs  tray.rs  windows.rs
src/backends/: llamacpp.rs  mock.rs  mod.rs  ollama.rs  openai_http.rs
src/correction/: chunk.rs  common_words.rs  guardrails.rs  mod.rs  prompt.rs
src/server/: auth.rs  error.rs  mod.rs  routes.rs  stream.rs
src/store/: entry.rs  mod.rs  schema.rs
tests/: api_basics.rs  api_chat.rs  api_stream.rs  correction.rs  journal_pipeline.rs  journal_store.rs  llamacpp.rs  nonreg_reel.rs  ollama.rs  runtime_lifecycle.rs
tests/fixtures/: dictionary.json  fr_noms_propres.json
ui/: dictionary.html  index.html  journal.html  package-lock.json  package.json  settings.html  stats.html  vite.config.js
ui/src/: App.svelte  app.css  lib.js  main.js
ui/src/views/: Dictionary.svelte  Home.svelte  Journal.svelte  Settings.svelte  Stats.svelte
