[package]
name = "lucid"
version = "0.1.0"
edition = "2021"

[lib]
name = "lucid"
path = "src/lib.rs"

[[bin]]
name = "lucid"
path = "src/main.rs"

[features]
# Interface barre de menus Tauri. Sans cette feature, la crate compile et teste
# en headless (sans Node ni Tauri) — les tests restent verts.
gui = ["dep:tauri", "dep:tauri-plugin-clipboard-manager"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
async-trait = "0.1"
arc-swap = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
temp-env = "0.3"
